--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Open Sans", sans-serif;
+  /* ligne 8 , nous permet de l'utiliser par defaut et evite de devoir l'ecrire partout, on peu toujour en definir une autre dans le css si besoin */
 }
 
 code {
